Fixed margins on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,6 +150,10 @@ img.img-fluid {
 @media (max-width: 1000px) {
     .container #hope #concerns #risks #what #prevent {
         margin-left: 20px;
-        margin-left: auto;
+        margin-right: 20px;
+    }
+
+    main {
+        padding: 10px;
     }
 }
